--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/tophatter/ff7b793d-3f49-46f9-afe6-074c388d1b47'>Tophatter - Full Stack Engineer (Intern)</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://www.php-resource.de/jobs/job,45562,Full-Stack-Web-Entwickler---PHP--SQL--HTML-mwd.htm'>Full-Stack Web Entwickler - PHP / SQL / HTML (m/w/d) Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -46,7 +50,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/lootcakes-looking-for-senior-full-stack-net-developer-remote/'>Lootcakes looking for Senior Full-Stack .NET Developer (Remote)</a></h5> 
+<h5><a href='https://dedeleads.com/job/lootcakes-looking-for-senior-full-stack-net-developer-remote/'>Lootcakes looking for Senior Full-Stack .NET Developer (Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -108,7 +112,7 @@
 <p><span class="badge badge-light">Curitiba Brazil</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/465997-full-stack-developer-m-f-d'>Job @ NEUGELB Studios (Berlin): Full-Stack Develop... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/465997-full-stack-developer-m-f-d'>Job @ NEUGELB Studios (Berlin): Full-Stack Develop... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -140,11 +144,11 @@
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698431520-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698431520-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gobonfire/2aab72ee-b17d-4a01-aead-c3542a1b63a0'>Bonfire Interactive - Senior Full Stack Developer (Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gobonfire/2aab72ee-b17d-4a01-aead-c3542a1b63a0'>Bonfire Interactive - Senior Full Stack Developer (Remote)</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -156,7 +160,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oZyQafwh&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nPbPnMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oZyQafwh&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nPbPnMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -188,7 +192,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/swellcxcom/view/P_AAAAAADAAHIIabKpgG6Yxg'>Full Stack PHP Developer ? (Laravel &amp; Vue.js) job in Cottonwood Heights, UT at Swell</a></h5> 
+<h5><a href='https://hire.withgoogle.com/public/jobs/swellcxcom/view/P_AAAAAADAAHIIabKpgG6Yxg'>Full Stack PHP Developer ? (Laravel &amp; Vue.js) job in Cottonwood Heights, UT at Swell</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -296,7 +300,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://innogy.join.com/jobs/463889-full-stack-lead-developer-m-f-d-for-getaway'>Job @ innogy Innovation Hub (Berlin): Full Stack L... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://innogy.join.com/jobs/463889-full-stack-lead-developer-m-f-d-for-getaway'>Job @ innogy Innovation Hub (Berlin): Full Stack L... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -352,11 +356,11 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.aon3d.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer - AON3D</a></h5> 
+<h5><a href='https://www.aon3d.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer - AON3D</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -459,10 +463,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
     Senior Fullstack Developer at RELEX
 </a></h5> 
 <p><span class="badge badge-light">Helsinki, Finland</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/pd85up9ybifmw7b6bpqnoxdsca'>Full-Stack JavaScript Developer | Strategic Employment</a></h5> 
-<p><span class="badge badge-light">Burlington, MA  Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
